ARM: dts: msm: Add virtual platform specific pinctrl dtsi
Add customized pinctrl dtsi for virtual platform.

Change-Id: Id31cae5f3e96c4d816cb39953e0aaed5a783bb19
Signed-off-by: Zhiqiang Tu <ztu@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/vplatform-lfv-msm8996.dts
+++ b/arch/arm/boot/dts/qcom/vplatform-lfv-msm8996.dts
@@ -672,7 +672,7 @@
 	};
 };
 
-#include "msm8996-pinctrl.dtsi"
+#include "vplatform-lfv-msm8996-pinctrl.dtsi"
 #include "msm8996-smp2p.dtsi"
 
 &soc {
