--- a/drivers/pci/controller/Kconfig
+++ b/drivers/pci/controller/Kconfig
@@ -288,5 +288,30 @@ config PCI_HYPERV_INTERFACE
 	  The Hyper-V PCI Interface is a helper driver allows other drivers to
 	  have a common interface with the Hyper-V PCI frontend driver.
 
+config PCI_MSM
+	tristate "MSM PCIe Controller driver"
+	depends on ARCH_QCOM && PCI
+	select PCI_DOMAINS
+	select PCI_DOMAINS_GENERIC
+	select PCI_MSI
+	select CRC8
+	help
+	  Enables the PCIe functionality by configuring PCIe core on
+	  MSM chipset and by enabling the ARM PCI framework extension.
+	  The PCIe core is essential for communication between the host
+	  and an endpoint.
+
+	  If unsure, say N.
+
+config PCI_MSM_MSI
+	tristate "MSM PCIe MSI support"
+	depends on PCI_MSM
+	depends on PCI_MSI_IRQ_DOMAIN
+	help
+	  Say Y here if you want to enable MSI support for PCIe
+	  controller and its devices. This controller offers
+	  message signaled interrupts (MSI) allocation, routing,
+	  masking, and affinity assigning for PCIe devices.
+
 source "drivers/pci/controller/dwc/Kconfig"
 endmenu
