msm: sps: Add SPS driver snapshot
Add snapshot of the SPS (Smart Peripheral Subsystem) driver from msm-4.19
'commit thermal: tsens: Add support for TSENS min temp and 0C interrupt
("7b3e424f29e7c55468258ea49e24996684a5051a")'.

Change-Id: I26319a4ac0571e72aecdd0f1c65e1837aafbafc6
Signed-off-by: Siva Kumar Akkireddi <sivaa@codeaurora.org>

--- a/drivers/platform/msm/Makefile
+++ b/drivers/platform/msm/Makefile
@@ -8,3 +8,4 @@ obj-$(CONFIG_IPA3) += ipa/
 obj-$(CONFIG_MSM_GENI_SE) += msm-geni-se.o
 obj-$(CONFIG_USB_BAM) += usb_bam.o
 obj-$(CONFIG_QPNP_REVID) += qpnp-revid.o
+obj-$(CONFIG_SPS) += sps/
