--- a/drivers/firmware/Kconfig
+++ b/drivers/firmware/Kconfig
@@ -321,5 +321,6 @@ source "drivers/firmware/imx/Kconfig"
 source "drivers/firmware/meson/Kconfig"
 source "drivers/firmware/tegra/Kconfig"
 source "drivers/firmware/xilinx/Kconfig"
+source "drivers/firmware/qcom/Kconfig"
 
 endmenu
