--- a/drivers/thermal/qcom/Kconfig
+++ b/drivers/thermal/qcom/Kconfig
@@ -20,3 +20,13 @@ config QCOM_SPMI_TEMP_ALARM
 	  trip points. The temperature reported by the thermal sensor reflects the
 	  real time die temperature if an ADC is present or an estimate of the
 	  temperature based upon the over temperature stage value.
+
+config QTI_CPU_ISOLATE_COOLING_DEVICE
+	tristate "QTI CPU Isolate cooling devices"
+	depends on THERMAL_OF && QTI_THERMAL
+	help
+	   This enables the QTI CPU Isolation cooling devices. These cooling
+	   devices will be used by QTI chipset to isolate a CPU from being
+	   scheduled and hence will let the CPU to power collapse. Isolating
+	   a CPU will be used when the CPU frequency mitigation
+	   is not good enough to achieve the necessary cooling.
