drivers: thermal: qmi_sensor: Add snapshot of qmi sensor driver
This is a snapshot of the qmi sensor driver from msm-4.19 to msm-5.4
as of 'commit <076ba8f024a882373ff8ed27780362c3733b21dc> (drivers:
thermal: qmi_sensor: Add support for new sensors)'.

Change-Id: Ib1e6359aba7a794cf64f07e888cef36b6c04f87c
Signed-off-by: Ram Chandrasekar <rkumbako@codeaurora.org>

--- a/drivers/thermal/qcom/Kconfig
+++ b/drivers/thermal/qcom/Kconfig
@@ -21,6 +21,16 @@ config QCOM_SPMI_TEMP_ALARM
 	  real time die temperature if an ADC is present or an estimate of the
 	  temperature based upon the over temperature stage value.
 
+config QTI_QMI_SENSOR
+	tristate "QTI QMI sensor driver"
+	depends on QCOM_QMI_HELPERS && THERMAL_OF && QTI_THERMAL
+	help
+	   This enables to list the QTI remote subsystem temperature sensors.
+	   This driver can read the temperature of the remote sensor.
+	   These sensors can take thresholds and notify the thermal
+	   framework when the threshold is reached.
+
+
 config QTI_CPU_ISOLATE_COOLING_DEVICE
 	tristate "QTI CPU Isolate cooling devices"
 	depends on THERMAL_OF && QTI_THERMAL
