drivers: thermal: bcl_pmic5: Add snapshot of bcl driver
This is a snapshot of the bcl driver from ms-4.19 to msm-5.4 as of
'commit <dfe3da00b56a86849ec49e085ea5a57d3fa7636f> (drivers: thermal:
bcl_pmic5: filter out BCL spurious interrupts)'.

Modify vbat to register directly as a sensor bypassing the of-thermal.
This will enable vbat sensor to read trip thresholds directly from
the peripheral.

Change-Id: I5bf07e05ac47f68d16fc40e859b16a1ce549ee5d
Signed-off-by: Ram Chandrasekar <rkumbako@codeaurora.org>

--- a/drivers/thermal/qcom/Kconfig
+++ b/drivers/thermal/qcom/Kconfig
@@ -30,6 +30,15 @@ config QTI_QMI_SENSOR
 	   These sensors can take thresholds and notify the thermal
 	   framework when the threshold is reached.
 
+config QTI_BCL_PMIC5
+	tristate "BCL driver for BCL peripherals in PMIC5"
+	depends on SPMI && THERMAL_OF && QTI_THERMAL
+	help
+	  This driver provides routines to configure and monitor the BCL
+	  PMIC peripheral. This driver registers the battery current and
+	  voltage sensors with the thermal core framework and can take
+	  threshold input and notify the thermal core when the threshold is
+	  reached.
 
 config QTI_CPU_ISOLATE_COOLING_DEVICE
 	tristate "QTI CPU Isolate cooling devices"
