--- a/drivers/thermal/qcom/Kconfig
+++ b/drivers/thermal/qcom/Kconfig
@@ -40,6 +40,16 @@ config QTI_BCL_PMIC5
 	  threshold input and notify the thermal core when the threshold is
 	  reached.
 
+config QTI_BCL_SOC_DRIVER
+	tristate "QTI Battery state of charge sensor driver"
+	depends on THERMAL_OF && POWER_SUPPLY && QTI_THERMAL
+	help
+	  This driver registers battery state of charge as a sensor with
+	  thermal framework. This sensor can monitor for state of charge
+	  thresholds and notify the thermal framework when the thresholds
+	  are reached and cleared. This will help to monitor and apply any
+	  mitigation when state of charge goes below a certain threshold.
+
 config QTI_CPU_ISOLATE_COOLING_DEVICE
 	tristate "QTI CPU Isolate cooling devices"
 	depends on THERMAL_OF && QTI_THERMAL
