drivers: thermal: qmi_cooling: Add snapshot of QMI cooling device driver
This is a snapshot of the thermal framework from msm-4.19 to msm-5.4 as
of 'commit <e26a1b23a6f4b6e7202822d596164ffd9e7c8f5d> (drivers: thermal:
Return zero on success for qmi_tmd_send_state_request)'.

Change-Id: I91d666768fe17c2d8aaa11d9bee57644b31fa5e7
Signed-off-by: Ram Chandrasekar <rkumbako@codeaurora.org>

--- a/drivers/thermal/qcom/Makefile
+++ b/drivers/thermal/qcom/Makefile
@@ -6,6 +6,10 @@ qcom_tsens-y			+= tsens.o tsens-common.o tsens-v0_1.o \
 obj-$(CONFIG_QCOM_SPMI_TEMP_ALARM)	+= qcom-spmi-temp-alarm.o
 obj-$(CONFIG_QTI_QMI_SENSOR) += qti_qmi_sensor.o
 qti_qmi_sensor-y += thermal_sensor_service_v01.o qmi_sensors.o
+
+obj-$(CONFIG_QTI_QMI_COOLING_DEVICE) += qti_qmi_cdev.o
+qti_qmi_cdev-y += thermal_mitigation_device_service_v01.o qmi_cooling.o
+
 obj-$(CONFIG_QTI_CPU_ISOLATE_COOLING_DEVICE) += cpu_isolate.o
 obj-$(CONFIG_QTI_BCL_PMIC5) += bcl_pmic5.o
 obj-$(CONFIG_QTI_BCL_SOC_DRIVER) += bcl_soc.o
