--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -59,3 +59,4 @@ obj-$(CONFIG_QPNP_PBS) += qpnp-pbs.o
 obj-$(CONFIG_QCOM_WATCHDOG) += qcom_watchdog.o
 obj-$(CONFIG_MSM_SPCOM) += spcom.o
 obj-$(CONFIG_QCOM_FSA4480_I2C) += fsa4480-i2c.o
+obj-$(CONFIG_QCOM_EUD) += eud.o
