soc: qcom: add secure processor communication (spcom) driver
This driver supports communication with secure processor subsystem
(SPSS) over rpmsg and ungerlying glink transport layer. The
communication is based on using shared memory and interrupts.
Add snapshot for spcom driver from msm-4.19 commit b3159f82fb1b
("soc: qcom: spcom: fix active pid clean up").

Change-Id: Ic35584e8770980e2f480949808529a1d933da1f6
Signed-off-by: Konstantin Dorfman <kdorfman@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -572,4 +572,16 @@ config QCOM_WATCHDOG
           deadlocks. It does not run during the bootup process, so it will
           not catch any early lockups.
 
+config MSM_SPCOM
+         depends on QCOM_GLINK
+         bool "Secure Processor Communication over RPMSG"
+         help
+	   SPCOM driver allows loading Secure Processor Applications and sending
+	   messages to Secure Processor Applications. SPCOM implements logic of RPMSG
+	   client of SPSS edge. SPCOM provides interface to both user space app and
+	   kernel driver. It is using glink as the transport layer, which provides
+	   multiple logical channels over single physical channel. The physical layer
+	   is based on shared memory and interrupts. SPCOM provides clients/server API
+	   although currently only one client/server is allowed per logical channel.
+
 endmenu
