--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -560,6 +560,18 @@ config QTI_DDR_STATS_LOG
 	  frequency residency and counts. The driver outputs information using
 	  sysfs.
 
+config MSM_JTAGV8
+	bool "Debug and ETM trace support across power collapse for ARMv8"
+	default y if CORESIGHT_SOURCE_ETM4X
+	depends on QCOM_SCM=y
+	help
+	  Enables support for debugging (specifically breakpoints) and ETM
+	  processor tracing across power collapse both for JTag and OS hosted
+	  software running on ARMv8 target. Enabling this will ensure debug
+	  and ETM registers are saved and restored across power collapse.
+	  If unsure, say 'N' here to avoid potential power, performance and
+	  memory penalty.
+
 config QCOM_FSA4480_I2C
 	bool "Fairchild FSA4480 chip with I2C"
 	select REGMAP_I2C
