--- a/drivers/net/wireless/ath/wil6210/Kconfig
+++ b/drivers/net/wireless/ath/wil6210/Kconfig
@@ -53,3 +53,12 @@ config WIL6210_DEBUGFS
 	  option if you are interested in debugging the driver.
 
 	  If unsure, say Y to make it easier to debug problems.
+
+config WIL6210_IPA
+	bool "wil6210 IPA offload support"
+	depends on WIL6210
+	depends on ARCH_QCOM
+	default y
+	help
+	  Say Y here to enable wil6210 driver support for data path
+	  IPA offload
