--- a/arch/arm64/boot/dts/mediatek/mt6885.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6885.dts
@@ -5981,6 +5981,54 @@ page_owner=on loop.max_part=7";
 		ch_offset_ccu = <0x200>;
 	};
 
+	i2c10: i2c10@11017000 {
+		compatible = "mediatek,i2c";
+		id = <10>;
+		reg = <0 0x11017000 0 0x1000>;
+		interrupts = <GIC_SPI 122 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C10_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c11: i2c11@1101A000 {
+		compatible = "mediatek,i2c";
+		id = <11>;
+		reg = <0 0x1101A000 0 0x1000>;
+		interrupts = <GIC_SPI 123 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C11_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c12: i2c12@1101B000 {
+		compatible = "mediatek,i2c";
+		id = <12>;
+		reg = <0 0x1101B000 0 0x1000>;
+		interrupts = <GIC_SPI 124 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C12_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c13: i2c13@11007000 {
+		compatible = "mediatek,i2c";
+		id = <13>;
+		reg = <0 0x11007000 0 0x1000>;
+		interrupts = <GIC_SPI 125 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C13_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
 	goodix_fp: fingerprint {
 		compatible = "mediatek,goodix-fp";
 	};
