[ALPS04902422] dct: support mt6873
dct support mt6873

MTK-Commit-Id: 5477c8cb5f629f4c85c23347341bf51d312d419f

Change-Id: I81e6b74fca21c679a434248ef3ad627bd1e589a3
Signed-off-by: Shuai Zhang <shuai.zhang@mediatek.com>
CR-Id: ALPS04902422
Feature: Driver Customization Tool

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -4491,6 +4491,12 @@
 	};
 	aud_gpio_i2s9_on: aud_gpio_i2s9_on {
 	};
+	msdc1_ins:msdc1_ins {
+	};
+	md1_sim1_hot_plug_eint:md1_sim1_hot_plug_eint {
+	};
+	md1_sim2_hot_plug_eint:md1_sim2_hot_plug_eint {
+	};
 };
 
 #ifndef CONFIG_FPGA_EARLY_PORTING
