[ALPS04904548] wlan: New chip porting for enabling config
New chip porting for enabling config.

MTK-Commit-Id: 71ef06bce14799f2185817619426a81fd7d14341

Change-Id: I2d89b3f053d74e86e8a8b2b86d8ef58b5ac575d6
CR-Id: ALPS04904548
Feature: [Module]Wi-Fi Driver
Signed-off-by: Ben Lai <ben.lai@mediatek.com>

--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -111,6 +111,7 @@ CONFIG_MTK_TILTDETECTHUB=y
 CONFIG_CUSTOM_KERNEL_SENSORHUB=y
 CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6873=y
+CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6635_FM"
