--- a/arch/arm64/configs/k6873v1_64_defconfig
+++ b/arch/arm64/configs/k6873v1_64_defconfig
@@ -135,6 +135,7 @@ CONFIG_NANOHUB=y
 CONFIG_NANOHUB_MTK_IPI=y
 CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6873=y
+CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6635_FM"
