--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -215,6 +215,14 @@
 			alignment = <0 0x1000000>;
 			alloc-ranges = <0 0x40000000 0 0x80000000>;
 		};
+
+		wifi-reserve-memory {
+			compatible = "mediatek,wifi-reserve-memory";
+			no-map;
+			size = <0 0x600000>;
+			alignment = <0 0x1000000>;
+			alloc-ranges = <0 0x40000000 0 0x80000000>;
+		};
 	};
 
 	gic: interrupt-controller {
@@ -1740,6 +1748,12 @@
 			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 			/*ap dma clock*/
 		clock-names = "btifc","apdmac";
+	};
+
+	wifi@18000000 {
+		compatible = "mediatek,wifi";
+		reg = <0 0x18000000 0 0x100000>;
+		interrupts = <GIC_SPI 376 IRQ_TYPE_LEVEL_LOW>;
 	};
 
 	consys: consys@18002000 {
