[ALPS04900143] lpm: mt6885: Support sysram dump command
1. Support common sysram info dump
2. Support suspend sysram info dump
3, Support low power sysram info dump

MTK-Commit-Id: 027b97caf119480079bded3181e6658a2ca6ea72

Change-Id: I5178acf96c570b95880a097b4bc7a51c88cb132e
Signed-off-by: Chih-Wei Chiou <chih-wei.chiou@mediatek.com>
CR-Id: ALPS04900143
Feature: Power Management

--- a/drivers/misc/mediatek/lpm/platform/Makefile
+++ b/drivers/misc/mediatek/lpm/platform/Makefile
@@ -5,3 +5,4 @@ obj-y += mtk_lpm_platform.o
 obj-y += mtk_lpm_irqremain.o
 obj-y += mtk_lpm_resource_ctrl.o
 obj-y += mtk_lpm_rc.o
+obj-y += mtk_lpm_trace.o
