--- a/arch/arm64/boot/dts/mediatek/mt6885.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6885.dts
@@ -227,10 +227,17 @@ page_owner=on loop.max_part=7";
 		#size-cells = <2>;
 		ranges;
 		suspend-method = "system";
+
 		irq-remain = <&edge_keypad &edge_mdwdt>;
 		resource-ctrl = <&bus26m &infra &syspll>,
 				<&dram_s0 &dram_s1>;
 		constraints = <&rc_bus26m &rc_syspll &rc_dram>;
+
+		lpm_sysram: lpm_sysram@0011b500 {
+			compatible = "mediatek,lpm-sysram";
+			reg = <0 0x0011b500 0 0x300>;
+		};
+
 		irq-remain-list {
 			edge_keypad: edge_keypad {
 				target = <&keypad>;
