--- a/arch/arm64/configs/k6873v1_64_defconfig
+++ b/arch/arm64/configs/k6873v1_64_defconfig
@@ -137,6 +137,7 @@ CONFIG_MTK_COMBO=y
 CONFIG_MTK_COMBO_CHIP_CONSYS_6873=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
+CONFIG_MTK_GPS_SUPPORT=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6635_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
