--- a/drivers/misc/mediatek/apusys/midware/Makefile
+++ b/drivers/misc/mediatek/apusys/midware/Makefile
@@ -48,4 +48,4 @@ apusys-objs += $(APUSYS_VERSION_MIDWARE)/memory_ion.o
 apusys-objs += $(APUSYS_VERSION_MIDWARE)/memory_dma.o
 apusys-objs += $(APUSYS_VERSION_MIDWARE)/sched_deadline.o
 apusys-objs += $(APUSYS_VERSION_MIDWARE)/sched_normal.o
-apusys-objs += $(APUSYS_VERSION_MIDWARE)/dump_reg.o
+apusys-objs += $(MTK_PLATFORM)/dump_reg.o
