[ALPS04900482] TOUCH: GT9896S porting cfg
open GT9896s TOUCH CFG

MTK-Commit-Id: 390883ac30ceb05be9f64d757d324a1e853d2264

Change-Id: I4f62de4407b1f06aee6df1b6e6100b9c2e2d4be7
Signed-off-by: mtk15754 <wenqiang.zhang@mediatek.com>
CR-Id: ALPS04900482
Feature: [Android Default] CapTouch

--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -177,6 +177,8 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_INPUT_MOUSE is not set
+CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_VT is not set
