--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -199,6 +199,13 @@
 			alloc-ranges = <0 0x40000000 0 0x50000000>;
 		};
 #endif
+		reserve-memory-adsp_share {
+			compatible = "mediatek,reserve-memory-adsp_share";
+			no-map;
+			size = <0 0x1000000>;
+			alloc-ranges = <0 0x40000000 0 0x40000000>;
+			alignment = <0 0x10000>; //EMI 64KB Align
+		};
 
 		reserve-memory-scp_share {
 			compatible = "mediatek,reserve-memory-scp_share";
@@ -1580,6 +1587,105 @@
 
 		core_0 = "enable";
 		scp_sramSize = <0x00100000>;
+	};
+
+	adsp_common: adsp_common@10800000 {
+		compatible = "mediatek,adsp_common";
+		reg = <0 0x1080b000 0 0x50>, /* CFG SECURE */
+			<0 0x10806000 0 0x100>, /* MBOX0 base */
+			<0 0x10806100 0 0x4>, /* MBOX0 set */
+			<0 0x1080610c 0 0x4>, /* MBOX0 clr */
+			<0 0x10806104 0 0x4>, /* MBOX0 send */
+			<0 0x10806108 0 0x4>, /* MBOX0 recv */
+			<0 0x1080b050 0 0x4>, /* MBOX0 init */
+			<0 0x10807000 0 0x100>, /* MBOX1 base */
+			<0 0x10807100 0 0x4>, /* MBOX1 set */
+			<0 0x1080710c 0 0x4>, /* MBOX1 clr */
+			<0 0x10807104 0 0x4>, /* MBOX1 send */
+			<0 0x10807108 0 0x4>, /* MBOX1 recv */
+			<0 0x1080b054 0 0x4>, /* MBOX1 init */
+			<0 0x10808000 0 0x100>, /* MBOX2 base */
+			<0 0x10808100 0 0x4>, /* MBOX2 set */
+			<0 0x1080810c 0 0x4>, /* MBOX2 clr */
+			<0 0x10808104 0 0x4>, /* MBOX2 send */
+			<0 0x10808108 0 0x4>, /* MBOX2 recv */
+			<0 0x1080b058 0 0x4>, /* MBOX2 init */
+			<0 0x10809000 0 0x100>, /* MBOX3 base */
+			<0 0x10809100 0 0x4>, /* MBOX3 set */
+			<0 0x1080910c 0 0x4>, /* MBOX3 clr */
+			<0 0x10809104 0 0x4>, /* MBOX3 send */
+			<0 0x10809108 0 0x4>, /* MBOX3 recv */
+			<0 0x1080b05c 0 0x4>; /* MBOX3 init */
+		reg-names = "cfg_secure",
+			"mbox0_base",
+			"mbox0_set",
+			"mbox0_clr",
+			"mbox0_send",
+			"mbox0_recv",
+			"mbox0_init",
+			"mbox1_base",
+			"mbox1_set",
+			"mbox1_clr",
+			"mbox1_send",
+			"mbox1_recv",
+			"mbox1_init",
+			"mbox2_base",
+			"mbox2_set",
+			"mbox2_clr",
+			"mbox2_send",
+			"mbox2_recv",
+			"mbox2_init",
+			"mbox3_base",
+			"mbox3_set",
+			"mbox3_clr",
+			"mbox3_send",
+			"mbox3_recv",
+			"mbox3_init";
+		interrupts = <GIC_SPI 450 IRQ_TYPE_LEVEL_HIGH>, /* MBOX0 */
+			<GIC_SPI 451 IRQ_TYPE_LEVEL_HIGH>, /* MBOX1 */
+			<GIC_SPI 452 IRQ_TYPE_LEVEL_HIGH>, /* MBOX2 */
+			<GIC_SPI 453 IRQ_TYPE_LEVEL_HIGH>; /* MBOX3 */
+		interrupt-names = "mbox0",
+			"mbox1",
+			"mbox2",
+			"mbox3";
+		#mbox-cells = <1>;
+		clocks = <&scpsys SCP_SYS_ADSP>,
+			<&scp_adsp SCP_ADSP_CK_CG>,
+			<&topckgen TOP_MUX_ADSP>,
+			<&clk26m>,
+			<&topckgen TOP_ADSPPLL_CK>;
+		clock-names = "scp_sys_adsp",
+			"clk_adsp_ck_cg",
+			"clk_top_adsp_sel",
+			"clk_top_clk26m",
+			"clk_top_adsppll";
+	};
+
+	adsp_core0: adsp_core0@10820000 {
+		compatible = "mediatek,adsp_core_0";
+		reg = <0 0x10800000 0 0x6000>, /* CFG */
+			<0 0x10840000 0 0x9000>, /* ITCM */
+			<0 0x10820000 0 0x8000>; /* DTCM */
+		interrupts = <GIC_SPI 444 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 446 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 448 IRQ_TYPE_LEVEL_HIGH>;
+		mboxes = <&adsp_common 0>, /*channel 0*/
+			<&adsp_common 1>; /*channel 1*/
+		feature_control_bits = <0x303FF>;
+	};
+
+	adsp_core1: adsp_core1@10850000 {
+		compatible = "mediatek,adsp_core_1";
+		reg = <0 0x10800000 0 0x6000>, /* CFG */
+			<0 0x10870000 0 0x9000>, /* ITCM */
+			<0 0x10850000 0 0x8000>; /* DTCM */
+		interrupts = <GIC_SPI 445 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 447 IRQ_TYPE_LEVEL_HIGH>,
+			<GIC_SPI 449 IRQ_TYPE_LEVEL_HIGH>;
+		mboxes = <&adsp_common 2>, /*channel 2*/
+			<&adsp_common 3>; /*channel 3*/
+		feature_control_bits = <0x8F00F>;
 	};
 
 	dramc_ch1_rsv0@10900000 {
