[ALPS04899458] i2c&fingerprint: chicklist
1.add i2c and apdma CLK CG
2.add gpio status dump
3.add i2c10~13 driver
4.set dma support 64G
5.add fingerprint node dts

MTK-Commit-Id: 542aa65b5aa6e825e503365d532e65a429c4d714

Change-Id: I11e303f4c3ca478b55fa62c598de77b26a8003fb
Signed-off-by: Camo Xiao <camo.xiao@mediatek.com>
CR-Id: ALPS04899458
Feature: [Module]I2C / I3C (Inter-Integrated Circuit)

--- a/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
+++ b/arch/arm64/boot/dts/mediatek/k6873v1_64.dts
@@ -402,6 +402,60 @@
 	};
 }; /* IRTX GPIO Settings -End */
 
+/* FINGERPRINT start */
+&spi1 {
+	#address-cells = <1>;
+	#size-cells = <0>;
+	fingerprint@0 {
+		compatible = "goodix,goodix-fp";
+		reg = <0>;
+		spi-max-frequency = <8000000>;
+		netlink-event = <30>;
+		vfp-supply = <&mt_pmic_vfp_ldo_reg>;
+		power-type = <1>;
+		status = "okay";
+	};
+};
+
+&goodix_fp {
+	pinctrl-names = "default", "reset_high", "reset_low", "eint_init";
+	pinctrl-0 = <&fingerprint_default>;
+	pinctrl-1 = <&fingerprint_reset_high>;
+	pinctrl-2 = <&fingerprint_reset_low>;
+	pinctrl-3 = <&fingerprint_eint_init>;
+	interrupt-parent = <&pio>;
+	interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
+	status = "okay";
+};
+
+&pio {
+	fingerprint_default: state_default {
+	};
+	fingerprint_reset_high: state_reset_high {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO14__FUNC_GPIO14>;
+			slew-rate = <1>;
+			output-high;
+		};
+	};
+	fingerprint_reset_low: state_reset_low {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO14__FUNC_GPIO14>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+	fingerprint_eint_init: state_eint_init {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO15__FUNC_GPIO15>;
+			slew-rate = <0>;
+			bias-pull-up = <MTK_PUPD_SET_R1R0_10>;
+			input-schmitt-enable;
+		};
+	};
+};
+/* FINGERPRINT end */
+
 &mt6360_pmu {
 	mt6360,intr_gpio_num = <24>; /* direct defined GPIO num */
 	mt6360,intr_gpio = <&pio 24 0x0>;
