--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -3937,7 +3937,7 @@
 
 	i2c_common: i2c_common {
 		compatible = "mediatek,i2c_common";
-		dma_support = /bits/ 8 <2>;
+		dma_support = /bits/ 8 <3>;
 		idvfs = /bits/ 8 <1>;
 		set_dt_div = /bits/ 8 <1>;
 		check_max_freq = /bits/ 8 <1>;
@@ -3948,197 +3948,264 @@
 		dma_ver = /bits/ 8 <1>;
 	};
 
-	i2c0: i2c0@11F00000 {
+	i2c0: i2c0@11f00000 {
 		compatible = "mediatek,i2c";
 		id = <0>;
-		reg = <0 0x11F00000 0 0x1000>,
+		reg = <0 0x11f00000 0 0x1000>,
 			<0 0x10217080 0 0x80>;
 		interrupts = <GIC_SPI 112 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_w IMP_IIC_WRAP_W_AP_I2C0_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <83>;
-		sda-gpio-id = <82>;
-		gpio_start = <0x10002a00>;
+		scl-gpio-id = <204>;
+		sda-gpio-id = <205>;
+		gpio_start = <0x11f20000>;
 		mem_len = <0x200>;
-		eh_cfg = <0x30>;
-		pu_cfg = <0x70>;
-		rsel_cfg = <0x90>;
+		eh_cfg = <0x10>;
+		pu_cfg = <0x50>;
+		rsel_cfg = <0x70>;
 		aed = <0x1a>;
 	};
 
-	i2c1: i2c1@11D20000 {
+	i2c1: i2c1@11d20000 {
 		compatible = "mediatek,i2c";
 		id = <1>;
-		reg = <0 0x11D20000 0 0x1000>,
+		reg = <0 0x11d20000 0 0x1000>,
 			<0 0x10217100 0 0x80>;
 		interrupts = <GIC_SPI 113 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_ws IMP_IIC_WRAP_WS_AP_I2C1_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <84>;
-		sda-gpio-id = <81>;
-		gpio_start = <0x10002a00>;
+		scl-gpio-id = <118>;
+		sda-gpio-id = <119>;
+		gpio_start = <0x11d40000>;
 		mem_len = <0x200>;
-		eh_cfg = <0x30>;
-		pu_cfg = <0x70>;
-		rsel_cfg = <0x90>;
+		eh_cfg = <0x40>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
 		aed = <0x1a>;
 	};
 
-	i2c2: i2c2@11D21000 {
+	i2c2: i2c2@11d21000 {
 		compatible = "mediatek,i2c";
 		id = <2>;
-		reg = <0 0x11D21000 0 0x1000>,
+		reg = <0 0x11d21000 0 0x1000>,
 			<0 0x10217180 0 0x180>;
 		interrupts = <GIC_SPI 114 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_ws IMP_IIC_WRAP_WS_AP_I2C2_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <103>;
-		sda-gpio-id = <104>;
-		gpio_start = <0x10002800>;
+		scl-gpio-id = <141>;
+		sda-gpio-id = <142>;
+		gpio_start = <0x11d40000>;
 		mem_len = <0x200>;
 		eh_cfg = <0x40>;
-		pu_cfg = <0xa0>;
-		rsel_cfg = <0xf0>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
 		aed = <0x1a>;
 		ch_offset_default = <0x100>;
 		ch_offset_ccu = <0x200>;
 	};
 
-	i2c3: i2c3@11CB0000 {
+	i2c3: i2c3@11cb0000 {
 		compatible = "mediatek,i2c";
 		id = <3>;
-		reg = <0 0x11CB0000 0 0x1000>,
+		reg = <0 0x11cb0000 0 0x1000>,
 			<0 0x10217300 0 0x80>;
 		interrupts = <GIC_SPI 115 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_e IMP_IIC_WRAP_E_AP_I2C3_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <50>;
-		sda-gpio-id = <51>;
-		gpio_start = <0x10002600>;
+		scl-gpio-id = <160>;
+		sda-gpio-id = <161>;
+		gpio_start = <0x11ea0000>;
 		mem_len = <0x200>;
 		eh_cfg = <0x30>;
-		pu_cfg = <0x60>;
-		rsel_cfg = <0x90>;
-		aed = <0x1a>;
-		ch_offset_default = <0x100>;
-		ch_offset_ccu = <0x200>;
-	};
-
-	i2c4: i2c4@11D22000 {
-		compatible = "mediatek,i2c";
-		id = <4>;
-		reg = <0 0x11D22000 0 0x1000>,
-			<0 0x10217380 0 0x180>;
-		interrupts = <GIC_SPI 116 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
-		clock-names = "main", "dma";
-		clock-div = <5>;
-		scl-gpio-id = <105>;
-		sda-gpio-id = <106>;
-		gpio_start = <0x10002800>;
-		mem_len = <0x200>;
-		eh_cfg = <0x40>;
 		pu_cfg = <0xa0>;
 		rsel_cfg = <0xf0>;
 		aed = <0x1a>;
+	};
+
+	i2c4: i2c4@11d22000 {
+		compatible = "mediatek,i2c";
+		id = <4>;
+		reg = <0 0x11d22000 0 0x1000>,
+			<0 0x10217380 0 0x180>;
+		interrupts = <GIC_SPI 116 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_ws IMP_IIC_WRAP_WS_AP_I2C4_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
+		clock-names = "main", "dma";
+		clock-div = <5>;
+		scl-gpio-id = <139>;
+		sda-gpio-id = <140>;
+		gpio_start = <0x11d40000>;
+		mem_len = <0x200>;
+		eh_cfg = <0x40>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
+		aed = <0x1a>;
 		ch_offset_default = <0x100>;
 		ch_offset_ccu = <0x200>;
 	};
 
-	i2c5: i2c5@11E00000 {
+	i2c5: i2c5@11e00000 {
 		compatible = "mediatek,i2c";
 		id = <5>;
-		reg = <0 0x11E00000 0 0x1000>,
+		reg = <0 0x11e00000 0 0x1000>,
 			<0 0x10217500 0 0x80>;
 		interrupts = <GIC_SPI 117 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_s IMP_IIC_WRAP_S_AP_I2C5_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <48>;
-		sda-gpio-id = <49>;
-		gpio_start = <0x10002600>;
+		scl-gpio-id = <202>;
+		sda-gpio-id = <203>;
+		gpio_start = <0x11e20000>;
 		mem_len = <0x200>;
-		eh_cfg = <0x30>;
-		pu_cfg = <0x60>;
-		rsel_cfg = <0x90>;
+		eh_cfg = <0x20>;
+		pu_cfg = <0x50>;
+		rsel_cfg = <0x70>;
 		aed = <0x1a>;
 	};
 
-	i2c6: i2c6@11F01000 {
+	i2c6: i2c6@11f01000 {
 		compatible = "mediatek,i2c";
 		id = <6>;
-		reg = <0 0x11F01000 0 0x1000>,
+		reg = <0 0x11f01000 0 0x1000>,
 			<0 0x10217580 0 0x80>;
 		interrupts = <GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_n IMP_IIC_WRAP_N_AP_I2C6_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <89>;
-		sda-gpio-id = <90>;
-		gpio_start = <0x10002000>;
+		scl-gpio-id = <200>;
+		sda-gpio-id = <201>;
+		gpio_start = <0x11f20000>;
 		mem_len = <0x200>;
-		eh_cfg = <0x30>;
-		pu_cfg = <0x60>;
-		rsel_cfg = <0x90>;
+		eh_cfg = <0x10>;
+		pu_cfg = <0x50>;
+		rsel_cfg = <0x70>;
 		aed = <0x1a>;
-		ch_offset_default = <0x100>;
 	};
 
-	i2c7: i2c7@11D00000 {
+	i2c7: i2c7@11d00000 {
 		compatible = "mediatek,i2c";
 		id = <7>;
-		reg = <0 0x11D00000 0 0x1000>,
+		reg = <0 0x11d00000 0 0x1000>,
 			<0 0x10217600 0 0x180>;
 		interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_s IMP_IIC_WRAP_S_AP_I2C7_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
-		scl-gpio-id = <175>;
-		sda-gpio-id = <176>;
-		gpio_start = <0x10002600>;
+		scl-gpio-id = <124>;
+		sda-gpio-id = <125>;
+		gpio_start = <0x11d40000>;
 		mem_len = <0x200>;
-		eh_cfg = <0x30>;
-		pu_cfg = <0x60>;
-		rsel_cfg = <0x90>;
+		eh_cfg = <0x40>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
 		aed = <0x1a>;
 	};
 
-	i2c8: i2c8@11D01000 {
+	i2c8: i2c8@11d01000 {
 		compatible = "mediatek,i2c";
 		id = <8>;
-		reg = <0 0x11D01000 0 0x1000>,
+		reg = <0 0x11d01000 0 0x1000>,
 			<0 0x10217780 0 0x180>;
 		interrupts = <GIC_SPI 120 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_s IMP_IIC_WRAP_S_AP_I2C8_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
+		scl-gpio-id = <122>;
+		sda-gpio-id = <123>;
+		gpio_start = <0x11d40000>;
+		mem_len = <0x200>;
+		eh_cfg = <0x40>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
 		aed = <0x1a>;
+		ch_offset_default = <0x100>;
+		ch_offset_ccu = <0x200>;
 	};
 
-	i2c9: i2c9@11D02000 {
+	i2c9: i2c9@11d02000 {
 		compatible = "mediatek,i2c";
 		id = <9>;
-		reg = <0 0x11D02000 0 0x1000>,
+		reg = <0 0x11d02000 0 0x1000>,
 			<0 0x10217900 0 0x180>;
 		interrupts = <GIC_SPI 121 IRQ_TYPE_LEVEL_HIGH>;
-		/* clocks = <&infracfg_ao CLK_IFR_I2C_AP>, */
-			/* <&infracfg_ao CLK_IFR_AP_DMA>; */
+		clocks = <&imp_iic_wrap_s IMP_IIC_WRAP_S_AP_I2C9_CG_RO>,
+			<&infracfg_ao INFRACFG_AO_AP_DMA_CG>;
 		clock-names = "main", "dma";
 		clock-div = <5>;
+		scl-gpio-id = <120>;
+		sda-gpio-id = <121>;
+		gpio_start = <0x11d40000>;
+		mem_len = <0x200>;
+		eh_cfg = <0x40>;
+		pu_cfg = <0xb0>;
+		rsel_cfg = <0xe0>;
 		aed = <0x1a>;
+		ch_offset_default = <0x100>;
+		ch_offset_ccu = <0x200>;
+	};
+
+	i2c10: i2c10@11015000 {
+		compatible = "mediatek,i2c";
+		id = <10>;
+		reg = <0 0x11015000 0 0x1000>;
+		interrupts = <GIC_SPI 122 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C10_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c11: i2c11@11017000 {
+		compatible = "mediatek,i2c";
+		id = <11>;
+		reg = <0 0x11017000 0 0x1000>;
+		interrupts = <GIC_SPI 123 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C11_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c12: i2c12@1101a000 {
+		compatible = "mediatek,i2c";
+		id = <12>;
+		reg = <0 0x1101a000 0 0x1000>;
+		interrupts = <GIC_SPI 124 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C12_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	i2c13: i2c13@1101b000 {
+		compatible = "mediatek,i2c";
+		id = <13>;
+		reg = <0 0x1101b000 0 0x1000>;
+		interrupts = <GIC_SPI 125 IRQ_TYPE_LEVEL_HIGH>;
+		clocks = <&imp_iic_wrap_c IMP_IIC_WRAP_C_AP_I2C13_CG_RO>;
+		clock-names = "main";
+		clock-div = <5>;
+		aed = <0x1a>;
+		mediatek,fifo_only;
+	};
+
+	goodix_fp: fingerprint {
+		compatible = "mediatek,goodix-fp";
 	};
 
 	accdet: accdet {
