[ALPS04905865] mmdvfs: mt6873 MMDVFS Porting
[Detail]
MMDVFS porting and modify makefile

[Solution]
MMDVFS porting and modify makefile

MTK-Commit-Id: 4d48fb168c79d782312afa3c7e7cfdb96dbd1f9b

Change-Id: I41378f8cc03c9880799a3c1dd30cc170948cba37
Signed-off-by: Sabrina Kuo <Yi.Kuo@mediatek.com>
CR-Id: ALPS04905865
Feature: [Module]MM pipeline/MM DVFS

--- a/drivers/misc/mediatek/mmdvfs/Makefile
+++ b/drivers/misc/mediatek/mmdvfs/Makefile
@@ -55,6 +55,8 @@ QOS_BOUND_DETECT := true
 FORCE_STEP0 := false
 ccflags-y += -DCHECK_VOLTAGE
 ccflags-y += -DPMQOS_USE_IOMMU_PORT
+else ifneq (,$(filter $(CONFIG_MTK_PLATFORM), "mt6873"))
+BUILD_MMDVFS := true
 endif
 
 ifeq ($(CONFIG_MTK_MMDVFS),y)
