[ALPS04901894] scp: dump bus tracker reg
dump bus tracker register while SCP EE occurs

MTK-Commit-Id: 39451ff44f56e844d02cd494abe7c0ca580b4822

Change-Id: I2362306c8937286faef54bb14469110615728f0f
CR-Id: ALPS04901894
Feature: TinySys
Signed-off-by: HT Feng <ht.feng@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6885.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6885.dts
@@ -2610,6 +2610,7 @@ page_owner=on loop.max_part=7";
 		<0 0x10721000 0 0x1000>,	 /* clk*/
 		<0 0x10730000 0 0x1000>,	 /* cfg core0 */
 		<0 0x10740000 0 0x1000>,	 /* cfg core1 */
+		<0 0x10752000 0 0x1000>,	 /* bus tracker */
 		<0 0x10760000 0 0x40000>,	 /* llc */
 		<0 0x107a5000 0 0x4>,		 /* cfg_sec */
 		<0 0x107fb000 0 0x100>,		 /* mbox0 base */
@@ -2638,6 +2639,7 @@ page_owner=on loop.max_part=7";
 			"scp_clkreg",
 			"scp_cfgreg_core0",
 			"scp_cfgreg_core1",
+			"scp_bus_tracker",
 			"scp_l1creg",
 			"scp_cfgreg_sec",
 			"mbox0_base",
