--- a/drivers/misc/mediatek/cameraisp/src/Makefile
+++ b/drivers/misc/mediatek/cameraisp/src/Makefile
@@ -25,6 +25,10 @@ ifeq ($(CONFIG_MACH_MT6885),y)
   obj-y += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 endif
 
+ifeq ($(CONFIG_MACH_MT6873),y)
+  obj-y += $(subst ",,$(CONFIG_MTK_PLATFORM))/
+endif
+
 ifeq ($(CONFIG_MACH_MT6771),y)
   obj-y += isp_50/
 endif
