[ALPS04900553] apusys: add debug driver
add debug driver for checking seldom issue

MTK-Commit-Id: 6d223feb44a038ed7b3cde7daa94303151fc4421

Change-Id: If0934c3d0757c55c7a0d981c2845222add9c04bc
Signed-off-by: Jack Hsieh <jack.hsieh@mediatek.com>
CR-Id: ALPS04900553
Feature: [Module] APUSYS

--- a/drivers/misc/mediatek/apusys/Makefile
+++ b/drivers/misc/mediatek/apusys/Makefile
@@ -16,6 +16,7 @@ obj-$(CONFIG_MTK_APUSYS_SUPPORT) += reviser/
 obj-$(CONFIG_MTK_APUSYS_SUPPORT) += mnoc/
 obj-$(CONFIG_MTK_APUSYS_SUPPORT) += midware/
 obj-$(CONFIG_MTK_APUSYS_SUPPORT) += sample/
+obj-$(CONFIG_MTK_APUSYS_SUPPORT) += debug/
 obj-$(CONFIG_MTK_APUSYS_MDLA_SUPPORT) += mdla/
 obj-$(CONFIG_MTK_APUSYS_VPU) += vpu/
 obj-$(CONFIG_MTK_APUSYS_EDMA_SUPPORT) += edma/
