[ALPS04898058] TOUCH: power_on reinit
reinit touch for lcm init

MTK-Commit-Id: b72debdc5a2f361387c9fe9a0e227f1531a5c3ec

Change-Id: Ife3090bb36f3900b6df50e7afaecc8ed07706ae2
Signed-off-by: mtk15754 <wenqiang.zhang@mediatek.com>
CR-Id: ALPS04898058
Feature: [Android Default] CapTouch

--- a/drivers/input/touchscreen/GT9886/Makefile
+++ b/drivers/input/touchscreen/GT9886/Makefile
@@ -3,7 +3,7 @@
 # Use xxxproject/Makefile-release when release driver
 #
 # core layer
-ccflags-y += -I$(srctree)/drivers/input/touchscreen/mediatek/
+ccflags-$(CONFIG_DRM_MEDIATEK) += -I$(srctree)/drivers/gpu/drm/mediatek/
 
 obj-y += goodix_ts_i2c.o
 obj-y += goodix_ts_core.o
