[ALPS04913380] MFB: Fix mt6873 build error
camera_mfb.c:70:10: fatal error: dt-bindings/gce/mt6885-gce.h
file not found;

MTK-Commit-Id: c6d1d35c4a4def3ba1690290c4d65f5a9896dbce

Change-Id: I504418f4024ba091a9294e614bb44a37baaa68b9
CR-Id: ALPS04913380
Feature: [Android Default] Camera Application Basic Functions
Signed-off-by: mtk14176 <yung-wen.shih@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -3903,6 +3903,8 @@
 		mboxes = <&gce_mbox 17 0 CMDQ_THR_PRIO_1>;
 		mss_frame_done =
 		/bits/ 16 <CMDQ_EVENT_IMG2_MSS_DONE_LINK_MISC>;
+		mss_token =
+		/bits/ 16 <CMDQ_SYNC_TOKEN_MSS>;
 	};
 
 	msf_b@15810000 {
@@ -3912,6 +3914,8 @@
 		mboxes = <&gce_mbox 18 0 CMDQ_THR_PRIO_1>;
 		msf_frame_done =
 		/bits/ 16 <CMDQ_EVENT_IMG2_MFB_DONE_LINK_MISC>;
+		msf_token =
+		/bits/ 16 <CMDQ_SYNC_TOKEN_MSF>;
 		clocks =
 				<&imgsys2_config IMGSYS2_LARB11_CGPDN>,
 				<&imgsys2_config IMGSYS2_MSS_CGPDN>,
