[ALPS04909915] AF driver: Porting main2 AF
porting AF for main2

MTK-Commit-Id: 9fd9ed936a17342c8f37f7b9c22ad523ba665c9d

Change-Id: I5628a7f6b4c726935e26f029b6476b6a5cdd59af
CR-Id: ALPS04909915
Feature: Dual Cam for Zoom
Signed-off-by: bradley_kung <bradley.kung@mediatek.com>

--- a/drivers/misc/mediatek/lens/main2/Makefile
+++ b/drivers/misc/mediatek/lens/main2/Makefile
@@ -37,6 +37,7 @@ MAIN2_CFILES  += common/lc898217afa/LC898217AFA.c
 MAIN2_CFILES  += common/lc898217afb/LC898217AFB.c
 MAIN2_CFILES  += common/lc898217afc/LC898217AFC.c
 MAIN2_CFILES  += common/ak7371af/AK7371AF.c
+MAIN2_CFILES  += common/ak7374af/AK7374AF.c
 MAIN2_CFILES  += common/bu6429af/bu64748af.c
 MAIN2_CFILES  += common/bu6429af/bu64748_function.c
 
@@ -48,6 +49,7 @@ else
 obj-y += main2_lens.o
 obj-y += common/lc898212xdaf_f/
 obj-y += common/ak7371af/
+obj-y += common/ak7374af/
 obj-y += common/bu64748af/
 obj-y += common/dw9718taf/
 obj-y += common/lc898217af/
