[ALPS04914695] wdt: fix k6873v1_64 build error
fix k6873v1_64 build error
fatal error: mtk_cpufreq_api.h file not found;

MTK-Commit-Id: 6921437f523c51115df61741074e6859d8cfc65b

Change-Id: Ic79191213735fc9c7f68e451c0ea78522b3ebfc8
Signed-off-by: Freddy Hsin <freddy.hsin@mediatek.com>
CR-Id: ALPS04914695
Feature: [Module]RGU (Reset Generator Unit)

--- a/drivers/watchdog/mediatek/wdt/common/wdt_v2/Makefile
+++ b/drivers/watchdog/mediatek/wdt/common/wdt_v2/Makefile
@@ -13,5 +13,5 @@
 
 ccflags-y += -I$(srctree)/drivers/watchdog/mediatek/include
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/dbgtop
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/mt6885/include/mach
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(CONFIG_MTK_PLATFORM)/include/mach
 obj-y += mtk_wdt_v2.o
