[ALPS04653807] PCIe: Add driver for PCIe SMT
Add driver for PCIe SMT, this driver is only used by SMT test.

MTK-Commit-Id: 21130a6c458bffa107d42d07c98fbf04d1d05934

Change-Id: I8f1fa15015668fb3195eefdd12bb333eb048179f
Signed-off-by: Jianjun Wang <jianjun.wang@mediatek.com>
CR-Id: ALPS04653807
Feature: Factory Mode

--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -318,6 +318,7 @@ source "drivers/misc/mediatek/devmpu/Kconfig"
 source "drivers/misc/mediatek/performance/Kconfig"
 source "drivers/misc/mediatek/cqdma/Kconfig"
 source "drivers/misc/mediatek/usb2jtag/Kconfig"
+source "drivers/misc/mediatek/pcie/Kconfig"
 endmenu # Other Peripheral
 
 menu "Performance, Power, and Thermal"
