--- a/drivers/misc/mediatek/Makefile
+++ b/drivers/misc/mediatek/Makefile
@@ -163,3 +163,4 @@ obj-$(CONFIG_MTK_MDDP_USB_SUPPORT) += mddp/
 obj-$(CONFIG_MTK_MDDP_WH_SUPPORT) += mddp/
 obj-$(CONFIG_MTK_MCIF_WIFI_SUPPORT) += mddp/
 obj-$(CONFIG_MTK_USB2JTAG_SUPPORT) += usb2jtag/
+obj-$(CONFIG_MTK_PCIE_SMT_SUPPORT) += pcie/
