[ALPS04909402] GPU: Support GPU DFD
[Detail]
Support GPU DFD dump

MTK-Commit-Id: ecdcb7f654aa6e29c9aa4a8ff0e1fe825ea308e2

Change-Id: I87e8b20a93de5d0adbc708bb66d8c0bf9983cf6f
CR-Id: ALPS04909402
Feature: OpenGL|ES
Signed-off-by: GuanWen Chen <gw.chen@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6885.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6885.dts
@@ -3040,6 +3040,26 @@ page_owner=on loop.max_part=7";
 		#clock-cells = <1>;
 	};
 
+	devapc_ao_infra_peri_debug1@10023000  {
+		compatible = "mediatek,devapc_ao_infra_peri_debug1";
+		reg = <0 0x10023000 0 0x1000>;
+	};
+
+	devapc_ao_infra_peri_debug2@10025000  {
+		compatible = "mediatek,devapc_ao_infra_peri_debug2";
+		reg = <0 0x10025000 0 0x1000>;
+	};
+
+	devapc_ao_infra_peri_debug3@1002b000  {
+		compatible = "mediatek,devapc_ao_infra_peri_debug3";
+		reg = <0 0x1002b000 0 0x1000>;
+	};
+
+	devapc_ao_infra_peri_debug4@1002e000  {
+		compatible = "mediatek,devapc_ao_infra_peri_debug4";
+		reg = <0 0x1002e000 0 0x1000>;
+	};
+
 	mdpsys_config: mdpsys_config@1f000000 {
 		compatible = "mediatek,mdpsys_config", "syscon";
 		reg = <0 0x1f000000 0 0x1000>;
