--- a/drivers/misc/mediatek/base/power/gpufreq_v1/mt6873/Makefile
+++ b/drivers/misc/mediatek/base/power/gpufreq_v1/mt6873/Makefile
@@ -17,6 +17,8 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/freqhopping/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/freqhopping/$(CONFIG_MTK_PLATFORM)/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/gpu/ged/include/
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/dbgtop/
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/dbgtop/$(MTK_PLATFORM)/
 ccflags-y += -I$(srctree)/drivers/clk/mediatek/
 
 ccflags-y += -Wno-unused-variable
